--- a/css/style.css
+++ b/css/style.css
@@ -27,5 +27,73 @@
     font-size: 18px;
     text-align: center;
     
+}
+
+#blog{
+   
+        backgorund-color : white;
+        display :flex;
+        flex-wrap: wrap;
+        justify-content: center;
+       
+}
+
+#blog > h2{
+    margin-top: 100px;
+    font-size: 30px;
+    text-align: center;
+    flex-basis: 100px;
+    
+    }
+#blog > div{
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 100px;
+    box-shadow: 0 0 10px rgb(0, 0, 0, 0.2);
+    flex-basis:  20%;
+    height: 325px;
+    border: 2px solid lightgray;
+    border-radius:  10px;
+}
+
+#blog > div > img{
+    width: 270px;
+    height: 140px;
+    object-fit: cover;
+}
+#blog > div > h3{
+    padding: 0px 5px 0px 23px;
 
 }
+#blog > div > p{
+    padding: 0px 35px 10px 20px;
+    text-align: justify;
+    font-size: 13px;
+}
+#blog > div > a{
+    padding: 0px 20px 0px 20px;
+    text-decoration: none;
+    color: lightslategray;
+    font-size: 13px;
+}
+#blog > div[title="Featured Post"]{
+    background-color: #1b1b1b;
+    border:  2px solid #1b1b1b;
+
+}
+#blog > div[title="Featurted Post"] > h3{
+    color: #fcfcfc;
+
+}
+#blog > div[title="Featured Post"] > p{
+    color: #fcfcfc;
+
+}
+#blog > div[title="Featured Post"] > a{
+    color: #fcfcfc;
+}
+#blog > div a:hover{
+    color: rebeccapurple;
+}
+
+
