--- a/css/style.css
+++ b/css/style.css
@@ -95,5 +95,37 @@
 #blog > div a:hover{
     color: rebeccapurple;
 }
+#sevices {
+    background-color: rgb(230, 229, 229);
+    display: flex;
+   flex-wrap: wrap;
+   justify-content: center;
 
+}
+#services > h2{
+    padding-top: 150px;
+    font-size: 30px;
+    text-align: center;
+    flex-basis: 100%;
+
+}
+#services > ul{
+    white-space: nowrap;
+    padding-bottom: 90px;
+
+}
+#services > ul > li{
+    display: inline-block;
+    list-style-type: none;
+    text-align: center;
+    padding: 25px 60px 25px 60px;
+    margin: 0px 15px 0px 10px;
+    background-color: white;
+}
+#services > ul > li:first-child{
+    background-color: orange;
+}
+#services > ul >li:hover{
+    box-shadow: 0 0 10px rgb(0, 0, 0, 0);
+}
 
